k8s/mainfests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
spec:
  type: ClusterIP
  selector:
    app: go-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
